--- a/Resources/Base.lproj/MainMenu.xib
+++ b/Resources/Base.lproj/MainMenu.xib
@@ -46,7 +46,7 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="788" y="606" width="1105" height="553"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1177"/>
             <value key="minSize" type="size" width="470" height="430"/>
             <view key="contentView" id="372">
                 <rect key="frame" x="0.0" y="0.0" width="1105" height="553"/>
@@ -394,11 +394,11 @@
                                 </tableView>
                             </subviews>
                         </clipView>
-                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="589">
+                        <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="589">
                             <rect key="frame" x="1" y="469" width="870" height="15"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
-                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="588">
+                        <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="588">
                             <rect key="frame" x="953" y="17" width="15" height="520"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
@@ -958,6 +958,12 @@ CA
                                     <action selector="addSignature:" target="-1" id="1631"/>
                                 </connections>
                             </menuItem>
+                            <menuItem title="Algorithm Preferences…" id="1935">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="editAlgorithmPreferences:" target="-1" id="1937"/>
+                                </connections>
+                            </menuItem>
                             <menuItem title="Generate Revoke Certificate…" id="1914">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
@@ -1013,25 +1019,6 @@ CA
                                     <action selector="minimizeKey:" target="-1" id="1866"/>
                                     <binding destination="663" name="enabled" keyPath="canRemove" id="MZg-YU-HDE"/>
                                     <binding destination="ONB-dh-h3M" name="hidden" keyPath="showExpertSettings" previousBinding="MZg-YU-HDE" id="KiL-iF-cyd">
-                                        <dictionary key="options">
-                                            <string key="NSValueTransformerName">NSNegateBoolean</string>
-                                        </dictionary>
-                                    </binding>
-                                </connections>
-                            </menuItem>
-                            <menuItem title="Algorithm Preferences…" id="1935">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <connections>
-                                    <action selector="editAlgorithmPreferences:" target="-1" id="1937"/>
-                                    <binding destination="663" name="enabled" keyPath="selection.self" id="Wsi-x6-Iz5">
-                                        <dictionary key="options">
-                                            <integer key="NSMultipleValuesPlaceholder" value="0"/>
-                                            <integer key="NSNoSelectionPlaceholder" value="0"/>
-                                            <integer key="NSNotApplicablePlaceholder" value="0"/>
-                                            <string key="NSValueTransformerName">NSIsNotNil</string>
-                                        </dictionary>
-                                    </binding>
-                                    <binding destination="ONB-dh-h3M" name="hidden" keyPath="showExpertSettings" previousBinding="Wsi-x6-Iz5" id="O0g-iF-amA">
                                         <dictionary key="options">
                                             <string key="NSValueTransformerName">NSNegateBoolean</string>
                                         </dictionary>
@@ -1128,6 +1115,12 @@ CA
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="addSignature:" target="-1" id="1965"/>
+                    </connections>
+                </menuItem>
+                <menuItem title="Algorithm Preferences..." id="VYg-fW-bVD">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="editAlgorithmPreferences:" target="-1" id="61o-OJ-t6O"/>
                     </connections>
                 </menuItem>
                 <menuItem title="Generate Revoke Certificate…" id="2118">
@@ -1286,6 +1279,7 @@ CA
                     </connections>
                 </menuItem>
             </items>
+            <point key="canvasLocation" x="-433" y="-570"/>
         </menu>
         <menu id="nWa-4H-Zp3" userLabel="Subkey Menu">
             <items>
@@ -1308,6 +1302,7 @@ CA
                     </connections>
                 </menuItem>
             </items>
+            <point key="canvasLocation" x="-817" y="-320"/>
         </menu>
         <levelIndicatorCell controlSize="small" state="on" alignment="left" doubleValue="3" maxValue="3" warningValue="3" criticalValue="3" id="ktV-w5-MsV">
             <font key="font" metaFont="smallSystem"/>
@@ -1323,7 +1318,7 @@ CA
             <windowStyleMask key="styleMask" titled="YES" closable="YES" resizable="YES" utility="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="1452" y="552" width="462" height="481"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1177"/>
             <value key="minSize" type="size" width="462" height="470"/>
             <value key="maxSize" type="size" width="1000" height="1000"/>
             <view key="contentView" id="7cN-1e-XZc">
@@ -1985,7 +1980,7 @@ IA
                                                                     <rect key="frame" x="20" y="30" width="392" height="145"/>
                                                                     <clipView key="contentView" id="cYY-Bm-u71">
                                                                         <rect key="frame" x="1" y="0.0" width="390" height="144"/>
-                                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                        <autoresizingMask key="autoresizingMask"/>
                                                                         <subviews>
                                                                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" multipleSelection="NO" emptySelection="NO" autosaveName="userIDsTable" headerView="grl-ch-lFh" id="6Ho-ob-hmK" userLabel="UserIDs Table">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="390" height="121"/>
@@ -2065,11 +2060,11 @@ IA
                                                                             </tableView>
                                                                         </subviews>
                                                                     </clipView>
-                                                                    <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="grB-G2-JOG">
+                                                                    <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="grB-G2-JOG">
                                                                         <rect key="frame" x="1" y="134" width="328" height="15"/>
                                                                         <autoresizingMask key="autoresizingMask"/>
                                                                     </scroller>
-                                                                    <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="gza-nx-7bm">
+                                                                    <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="gza-nx-7bm">
                                                                         <autoresizingMask key="autoresizingMask"/>
                                                                     </scroller>
                                                                     <tableHeaderView key="headerView" id="grl-ch-lFh" customClass="GKTableHeaderView">
@@ -2193,7 +2188,7 @@ IA
                                                                     <rect key="frame" x="20" y="50" width="392" height="176"/>
                                                                     <clipView key="contentView" id="Rjj-nQ-dJc">
                                                                         <rect key="frame" x="1" y="0.0" width="390" height="175"/>
-                                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                        <autoresizingMask key="autoresizingMask"/>
                                                                         <subviews>
                                                                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="firstColumnOnly" alternatingRowBackgroundColors="YES" multipleSelection="NO" autosaveName="signaturesTable" headerView="kNE-rm-6Iw" id="4f6-IT-Ksz" userLabel="Signatures Table">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="390" height="152"/>
@@ -2219,7 +2214,7 @@ IA
                                                                                             <binding destination="1171" name="value" keyPath="arrangedObjects.type" id="lJx-CV-oeG"/>
                                                                                         </connections>
                                                                                     </tableColumn>
-                                                                                    <tableColumn identifier="name" editable="NO" width="119.5" minWidth="40" maxWidth="1000" id="wkR-23-emF">
+                                                                                    <tableColumn identifier="name" editable="NO" width="120" minWidth="40" maxWidth="1000" id="wkR-23-emF">
                                                                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Name">
                                                                                             <font key="font" metaFont="smallSystem"/>
                                                                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -2338,11 +2333,11 @@ IA
                                                                             </tableView>
                                                                         </subviews>
                                                                     </clipView>
-                                                                    <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="0.5" horizontal="YES" id="5rU-Ho-Emg">
+                                                                    <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="0.5" horizontal="YES" id="5rU-Ho-Emg">
                                                                         <rect key="frame" x="1" y="159" width="408" height="15"/>
                                                                         <autoresizingMask key="autoresizingMask"/>
                                                                     </scroller>
-                                                                    <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="bEg-29-ShE">
+                                                                    <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="bEg-29-ShE">
                                                                         <rect key="frame" x="384" y="17" width="15" height="2"/>
                                                                         <autoresizingMask key="autoresizingMask"/>
                                                                     </scroller>
@@ -2439,7 +2434,7 @@ IA
                                                     <rect key="frame" x="17" y="236" width="392" height="191"/>
                                                     <clipView key="contentView" id="97f-Hf-HbR">
                                                         <rect key="frame" x="1" y="0.0" width="390" height="190"/>
-                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
                                                         <subviews>
                                                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="firstColumnOnly" alternatingRowBackgroundColors="YES" multipleSelection="NO" emptySelection="NO" autosaveName="subkeysTable" headerView="NzI-w2-TNg" id="Phv-dG-mjf">
                                                                 <rect key="frame" x="0.0" y="0.0" width="390" height="167"/>
@@ -2615,11 +2610,11 @@ IA
                                                             </tableView>
                                                         </subviews>
                                                     </clipView>
-                                                    <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="AdR-FV-VAP">
+                                                    <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="AdR-FV-VAP">
                                                         <rect key="frame" x="-100" y="-100" width="377" height="15"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                     </scroller>
-                                                    <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="c4a-tH-N3C">
+                                                    <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="c4a-tH-N3C">
                                                         <rect key="frame" x="-30" y="17" width="15" height="166"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                     </scroller>
